# with-clap

./: Cargo.toml  LICENSE  README.md  meta.md
.github/workflows/: update-deps.yml
scripts/: reset_cargo_toml.sh
src/: main.rs
