[package]
name = "with-clap"
version = "0.1.3"
edition = "2024"

[dependencies]
clap = "4.5.50"
log = "0.4.28"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
cargo-tarpaulin = "0.34.0"
cargo-watch = "8.5.3"
clippy = "0.0.302"
