[package]
name = "with-clap"
version = "0.1.3"
edition = "2024"

[dependencies]
clap = "4.6.4"
log = "0.4.33"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"

[dev-dependencies]
cargo-tarpaulin = "0.37.0"
cargo-watch = "8.5.3"
clippy = "0.0.302"
